[gd_scene load_steps=19 format=3 uid="uid://cil4wt8gdjlhs"]

[ext_resource type="Script" uid="uid://c3ropywrnp724" path="res://scenes/minigameScenes/towerCrash/skullslime.gd" id="1_fhow8"]
[ext_resource type="AudioStream" uid="uid://c8wr26htjd8kr" path="res://scenes/minigameScenes/towerCrash/SlimeDeath.wav" id="3_j5e0m"]
[ext_resource type="Texture2D" uid="uid://bgv3ai3iwk3uj" path="res://scenes/minigameScenes/towerCrash/skullslime-Sheet.png" id="5_8l2wa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dcamg"]
atlas = ExtResource("5_8l2wa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghexi"]
atlas = ExtResource("5_8l2wa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8m0g"]
atlas = ExtResource("5_8l2wa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmkyw"]
atlas = ExtResource("5_8l2wa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeshw"]
atlas = ExtResource("5_8l2wa")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8aiwn"]
atlas = ExtResource("5_8l2wa")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t22se"]
atlas = ExtResource("5_8l2wa")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3khc"]
atlas = ExtResource("5_8l2wa")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31ox7"]
atlas = ExtResource("5_8l2wa")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ef43"]
atlas = ExtResource("5_8l2wa")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_eocab"]
animations = [{
"frames": [],
"loop": true,
"name": &"ceiling",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcamg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghexi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8m0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmkyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeshw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aiwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t22se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3khc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31ox7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ef43")
}],
"loop": true,
"name": &"moving",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pa61v"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ay540"]
size = Vector2(80, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_auivk"]
size = Vector2(29, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_0ybg0"]

[node name="skullslime" type="CharacterBody2D"]
scale = Vector2(1.7, 1.7)
script = ExtResource("1_fhow8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_eocab")
animation = &"moving"
autoplay = "moving"

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(2, 4)
shape = SubResource("CircleShape2D_pa61v")

[node name="triggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggerArea"]
position = Vector2(-36, 82)
shape = SubResource("RectangleShape2D_ay540")

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0.5, 6)
shape = SubResource("RectangleShape2D_auivk")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_0ybg0")

[node name="wallCast" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(12.5, 0)

[node name="wallCast2" type="RayCast2D" parent="."]
position = Vector2(-12.5, 0)
target_position = Vector2(-13.5, 0)

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_j5e0m")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="triggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
